Add single camera to view both characters

--- a/StreetFighter/Config/DefaultEngine.ini
+++ b/StreetFighter/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameName=StreetFighter
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
 GameDefaultMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
@@ -141,5 +141,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
