--- a/StreetFighter/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/StreetFighter/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,6 +50,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-THB33BB
 LastExecutedLaunchName=DESKTOP-THB33BB
 LastExecutedPIEPreviewDevice=
+NewWindowPosition=(X=320,Y=155)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -95,9 +96,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -507,6 +506,66 @@ SideScrollerGameMode_C.Tick=True
 SideScrollerGameMode_C.Classes=True
 SideScrollerGameMode_C.Game=True
 SideScrollerGameMode_C.GameMode=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.Color Grading=True
+CameraComponent.Tonemapper=True
+CameraComponent.Mobile Tonemapper=True
+CameraComponent.Lens=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+SceneComponent.TransformCommon=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Variable=True
+SceneComponent.Cooking=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.Color Grading=True
+CameraActor.Tonemapper=True
+CameraActor.Mobile Tonemapper=True
+CameraActor.Lens=True
+CameraActor.Rendering Features=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Cooking=True
+CameraActor.Actor=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+ObjectProperty.Events=True
+K2Node_VariableGet.Events=True
+ClassProperty.Variable=True
+ClassProperty.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -515,6 +574,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 
 [RootWindow]
@@ -1127,5 +1187,13 @@ ChangeVariableType_Warning=False
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
 EdGraph.Graph=False
+
+[MessageLog]
+LastLogListing=PIE
+
+[AssetEditorToolkitTabLocation]
+/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=0
+/Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap:PersistentLevel.SideScrollerExampleMap=0
+/Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode=0
 
 
