healthbars and some character models

--- a/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,6 +129,8 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.Player2Jump,InputSett
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Player2Jump,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Player2,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Player2Jump,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Player2,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Player2Jump,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Player2,
+K2Node_VariableSet=
+SideScrollerExampleMap_C=K2Node_VariableSet.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
@@ -153,6 +155,11 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Player2HealthBar.Player2HealthBar
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter2.SideScrollerCharacter2
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter1.SideScrollerCharacter1
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Player1HealthBar.Player1HealthBar
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/MyPlayerController1.MyPlayerController1
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -648,6 +655,30 @@ DirectionalLight.LightFunction=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+ProgressBar.Layout=True
+ProgressBar.Style=False
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -655,6 +686,13 @@ Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
+SideScrollerExampleMap_C=
+LevelScriptActor=
+GameplayTagsSettings="\"Object.GameplayTags.GameplayTagList.GameplayTagList[1]\" "
+GameplayTagsList="\"Object.GameplayTags.GameplayTagList.GameplayTagList[1]\" "
+SideScrollerCharacter1_C=
+Character=
+Pawn=
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -668,6 +706,8 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 /Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode=0
 /Game/SideScrollerBP/Blueprints/SideScrollerCharacter2.SideScrollerCharacter2=0
 /Game/SideScrollerBP/Blueprints/MyPlayerController2.MyPlayerController2=0
+/Game/SideScrollerBP/Blueprints/Player1HealthBar.Player1HealthBar=0
+/Game/SideScrollerBP/Blueprints/Player2HealthBar.Player2HealthBar=0
 
 [MessageLog]
 LastLogListing=PIE
@@ -1259,6 +1299,8 @@ BlueprintGraph.TimeStamp=2018.02.02-03.20.22
 BlueprintGraph.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2018.02.02-03.20.24
 ExternalImagePicker.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.02.02-03.20.30
+SequencerWidgets.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1274,5 +1316,24 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[GameplayTagWidget]
+Player1.Expanded=False
+Player2.Expanded=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
 
 
