--- a/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,7 +133,7 @@ K2Node_VariableSet=
 SideScrollerExampleMap_C=K2Node_VariableSet.DefaultValueCategory.None,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/MixamoAnimPack/Mixamo_Vampire
+ContentBrowserTab1.SelectedPaths=/Game/MixamoAnimPack/Mixamo_Maria/Anims
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -178,6 +178,7 @@ LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/MyPlayerController1.MyPlayerController1
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter2.SideScrollerCharacter2
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -827,6 +828,96 @@ MixamoCharacter_Master_C.Replication=True
 MixamoCharacter_Master_C.Input=True
 MixamoCharacter_Master_C.Actor=True
 MyPlayerController1_C.Default=True
+SideScrollerCharacter2_C.Variable=True
+SideScrollerCharacter2_C.TransformCommon=True
+SideScrollerCharacter2_C.Sockets=True
+SideScrollerCharacter2_C.Animation=True
+SideScrollerCharacter2_C.Mesh=True
+SideScrollerCharacter2_C.Materials=True
+SideScrollerCharacter2_C.Clothing=True
+SideScrollerCharacter2_C.ClothingSimulation=True
+SideScrollerCharacter2_C.Physics=True
+SideScrollerCharacter2_C.Collision=True
+SideScrollerCharacter2_C.Lighting=True
+SideScrollerCharacter2_C.Tags=True
+SideScrollerCharacter2_C.ComponentReplication=True
+SideScrollerCharacter2_C.Activation=True
+SideScrollerCharacter2_C.Cooking=True
+SideScrollerCharacter2_C.Events=True
+Mixamo_Jill_C.TransformCommon=True
+Mixamo_Jill_C.Animation=True
+Mixamo_Jill_C.Mesh=True
+Mixamo_Jill_C.Clothing=True
+Mixamo_Jill_C.Physics=True
+Mixamo_Jill_C.Collision=True
+Mixamo_Jill_C.ClothingSimulation=True
+Mixamo_Jill_C.Lighting=True
+Mixamo_Jill_C.Rendering=True
+Mixamo_Jill_C.Tags=True
+Mixamo_Jill_C.Activation=True
+Mixamo_Jill_C.Cooking=True
+Mixamo_Jill_C.Character Movement: Jumping / Falling=True
+Mixamo_Jill_C.Character Movement (General Settings)=True
+Mixamo_Jill_C.Character Movement: Walking=True
+Mixamo_Jill_C.Character Movement: Swimming=True
+Mixamo_Jill_C.Character Movement: Flying=True
+Mixamo_Jill_C.Character Movement: Custom Movement=True
+Mixamo_Jill_C.Character Movement (Rotation Settings)=True
+Mixamo_Jill_C.Character Movement: Physics Interaction=True
+Mixamo_Jill_C.Character Movement (Networking)=True
+Mixamo_Jill_C.Character Movement=True
+Mixamo_Jill_C.Character Movement: Avoidance=True
+Mixamo_Jill_C.Character Movement: NavMesh Movement=True
+Mixamo_Jill_C.RootMotion=True
+Mixamo_Jill_C.NavMovement=True
+Mixamo_Jill_C.Velocity=True
+Mixamo_Jill_C.PlanarMovement=True
+Mixamo_Jill_C.MovementComponent=True
+Mixamo_Jill_C.Shape=True
+Mixamo_Jill_C.Navigation=True
+Mixamo_Jill_C.Character=True
+Mixamo_Jill_C.Camera=True
+Mixamo_Jill_C.Pawn=True
+Mixamo_Jill_C.Input=True
+Mixamo_Jill_C.Actor=True
+Mixamo_Jill_C.Materials=True
+Mixamo_Maria_C.TransformCommon=True
+Mixamo_Maria_C.Animation=True
+Mixamo_Maria_C.Mesh=True
+Mixamo_Maria_C.Clothing=True
+Mixamo_Maria_C.Physics=True
+Mixamo_Maria_C.Collision=True
+Mixamo_Maria_C.ClothingSimulation=True
+Mixamo_Maria_C.Lighting=True
+Mixamo_Maria_C.Rendering=True
+Mixamo_Maria_C.Tags=True
+Mixamo_Maria_C.Activation=True
+Mixamo_Maria_C.Cooking=True
+Mixamo_Maria_C.Character Movement: Jumping / Falling=True
+Mixamo_Maria_C.Character Movement (General Settings)=True
+Mixamo_Maria_C.Character Movement: Walking=True
+Mixamo_Maria_C.Character Movement: Swimming=True
+Mixamo_Maria_C.Character Movement: Flying=True
+Mixamo_Maria_C.Character Movement: Custom Movement=True
+Mixamo_Maria_C.Character Movement (Rotation Settings)=True
+Mixamo_Maria_C.Character Movement: Physics Interaction=True
+Mixamo_Maria_C.Character Movement (Networking)=True
+Mixamo_Maria_C.Character Movement=True
+Mixamo_Maria_C.Character Movement: Avoidance=True
+Mixamo_Maria_C.Character Movement: NavMesh Movement=True
+Mixamo_Maria_C.RootMotion=True
+Mixamo_Maria_C.NavMovement=True
+Mixamo_Maria_C.Velocity=True
+Mixamo_Maria_C.PlanarMovement=True
+Mixamo_Maria_C.MovementComponent=True
+Mixamo_Maria_C.Shape=True
+Mixamo_Maria_C.Navigation=True
+Mixamo_Maria_C.Character=True
+Mixamo_Maria_C.Camera=True
+Mixamo_Maria_C.Pawn=True
+Mixamo_Maria_C.Input=True
+Mixamo_Maria_C.Actor=True
+Mixamo_Maria_C.Materials=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -845,6 +936,8 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/MixamoAnimPack/Mixamo_Maria/Mixamo_Maria.Mixamo_Maria;
+RecentlyPlaced=/Game/MixamoAnimPack/Mixamo_Jill/Mixamo_Jill.Mixamo_Jill;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter1.SideScrollerCharacter1;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -868,6 +961,8 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 /Game/MixamoAnimPack/Mixamo_Vampire/Anims/Maximo_Vampire_Walk.Maximo_Vampire_Walk=0
 /Game/MixamoAnimPack/MixamoCharacter_Master.MixamoCharacter_Master=0
 /Game/MixamoAnimPack/Mixamo_Vampire/Anims/Maximo_Vampire_Shooting.Maximo_Vampire_Shooting=0
+/Game/MixamoAnimPack/Mixamo_Vampire/Anims/Maximo_Vampire_Sword_Swing.Maximo_Vampire_Sword_Swing=0
+/Game/MixamoAnimPack/Mixamo_Maria/Anims/Maria_J_J_Ong_Sword_Swing.Maria_J_J_Ong_Sword_Swing=0
 
 [MessageLog]
 LastLogListing=PIE
