Started working on menu UI

--- a/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -138,7 +138,7 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Widgets
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -824,10 +824,54 @@ EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Events=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Behavior=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Clipping=True
+EditableTextBox.Navigation=True
+EditableTextBox.Events=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Events=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
-Object=
+Object="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.GridSnapping.ScalingGridSizes\" \"Object.Preview.PreviewMeshes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -855,6 +899,13 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
+Border="\"Object.Appearance.BrushColor\" "
+ContentWidget=
+PanelWidget=
+Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+Visual="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -893,6 +944,8 @@ NodeTemplateCacheCapMB=20.000000
 /Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap:PersistentLevel.SideScrollerExampleMap=1
 /Game/SideScrollerBP/Blueprints/Player1HealthBar.Player1HealthBar=1
 /Game/SideScrollerBP/Blueprints/Player2HealthBar.Player2HealthBar=1
+/Game/Widgets/MainMenu.MainMenu=1
+/Game/Widgets/CharacterSelection.CharacterSelection=1
 
 [RootWindow]
 ScreenPosition=X=160.000 Y=70.000
@@ -1511,6 +1564,8 @@ HierarchicalLODUtilities.TimeStamp=2018.04.18-02.09.58
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2018.04.18-02.10.03
 SequencerWidgets.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2018.03.30-02.52.51
+SynthBenchmark.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1544,5 +1599,8 @@ SideScrollerCharacter_C.Animation=False
 PreviewWidth=1280
 PreviewHeight=720
 PreviewAspectRatio=16:9
+
+[MessageLog]
+LastLogListing=LoadErrors
 
 
