--- a/MediocreBrawlSisters/Config/DefaultEngine.ini
+++ b/MediocreBrawlSisters/Config/DefaultEngine.ini
@@ -2,16 +2,6 @@
 LocalMap=/Game/Example_Map
 GameName=MediocreBrawlSisters
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-TransitionMap=
-bUseSplitscreen=False
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-GlobalDefaultGameMode=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode_C
-GlobalDefaultServerGameMode=None
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_9
 
@@ -66,5 +56,19 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/SideScrollerBP/Maps/Menu.Menu
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/SideScrollerBP/Maps/Menu.Menu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/SideScrollerBP/Blueprints/MenuGameMode.MenuGameMode_C
+GlobalDefaultServerGameMode=None
 
 
