--- a/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -193,7 +193,11 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter2.SideScrollerCharacter2
+OpenAssetsAtExit=/Game/SideScrollerBP/Imports/Girl/notMaria_animBP.notMaria_animBP
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
+OpenAssetsAtExit=/Game/SideScrollerBP/Imports/Vampire/vampire_a_lusth_Skeleton_AnimBlueprint.vampire_a_lusth_Skeleton_AnimBlueprint
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1229,6 +1233,28 @@ REINST_SideScrollerCharacter2_C_1178.ComponentReplication=True
 REINST_SideScrollerCharacter2_C_1178.Activation=True
 REINST_SideScrollerCharacter2_C_1178.Cooking=True
 REINST_SideScrollerCharacter2_C_1178.Events=True
+EditorParentPlayerListObj.AnimGraphOverrides=True
+notMaria_BP_C.Default=True
+notMaria_BP_C.RootMotion=True
+notMaria_animBP_C.Default=True
+REINST_SideScrollerCharacter_C_263.None=True
+REINST_SideScrollerCharacter_C_263.Tick=True
+REINST_SideScrollerCharacter_C_263.Character=True
+REINST_SideScrollerCharacter_C_263.Camera=True
+REINST_SideScrollerCharacter_C_263.Pawn=True
+REINST_SideScrollerCharacter_C_263.Rendering=True
+REINST_SideScrollerCharacter_C_263.Replication=True
+REINST_SideScrollerCharacter_C_263.Input=True
+REINST_SideScrollerCharacter_C_263.Actor=True
+REINST_SideScrollerCharacter2_C_285.None=True
+REINST_SideScrollerCharacter2_C_285.Tick=True
+REINST_SideScrollerCharacter2_C_285.Character=True
+REINST_SideScrollerCharacter2_C_285.Camera=True
+REINST_SideScrollerCharacter2_C_285.Pawn=True
+REINST_SideScrollerCharacter2_C_285.Rendering=True
+REINST_SideScrollerCharacter2_C_285.Replication=True
+REINST_SideScrollerCharacter2_C_285.Input=True
+REINST_SideScrollerCharacter2_C_285.Actor=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
@@ -1336,6 +1362,10 @@ NodeTemplateCacheCapMB=20.000000
 /Game/SideScrollerBP/Imports/Girl/anims/Jump.Jump=0
 /Game/SideScrollerBP/Imports/Girl/anims/LegSweepLow.LegSweepLow=0
 /Game/SideScrollerBP/Imports/Girl/notMaria_animBP.notMaria_animBP=1
+/Game/SideScrollerBP/Imports/Vampire/Anims/Body_Block.Body_Block=1
+/Game/SideScrollerBP/Imports/Girl/notMaria_BP.notMaria_BP=1
+/Game/SideScrollerBP/Imports/Girl/anims/notMariaBlock.notMariaBlock=1
+/Game/SideScrollerBP/Imports/Vampire/Anims/Center_Block.Center_Block=1
 
 [RootWindow]
 ScreenPosition=X=76.000 Y=241.000
