check on animations

--- a/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -193,7 +193,8 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -1404,6 +1405,7 @@ NodeTemplateCacheCapMB=20.000000
 /Game/Widgets/Player1WinMarks.Player1WinMarks=0
 /Game/Widgets/Timer.Timer=1
 /Game/SideScrollerBP/Imports/Girl/anims/notMariaThreatening.notMariaThreatening=1
+/Game/SideScrollerBP/Imports/Vampire/Anims/Body_Block__2_.Body_Block__2_=1
 
 [RootWindow]
 ScreenPosition=X=76.000 Y=241.000
