Character select work; and other shit

--- a/MediocreBrawlSisters/Config/DefaultEngine.ini
+++ b/MediocreBrawlSisters/Config/DefaultEngine.ini
@@ -24,7 +24,7 @@ bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/SideScrollerBP/MyGameInstance.MyGameInstance_C
 GameDefaultMap=/Game/SideScrollerBP/Maps/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/SideScrollerBP/Blueprints/MenuGameMode.MenuGameMode_C
@@ -70,5 +70,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
