--- a/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MediocreBrawlSisters/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -72,9 +72,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-MRUItem1=/Game/SideScrollerBP/Maps/Menu
-MRUItem2=/Game/SideScrollerBP/Maps/CharacterSelect
+MRUItem0=/Game/SideScrollerBP/Maps/CharacterSelect
+MRUItem1=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+MRUItem2=/Game/SideScrollerBP/Maps/Menu
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -190,13 +190,13 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+LastLevel=/Game/SideScrollerBP/Maps/CharacterSelect
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Imports/Girl/notMaria_animBP.notMaria_animBP
+CleanShutdown=False
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Player2HealthBar.Player2HealthBar
 OpenAssetsAtExit=/Game/Widgets/CharacterSelection.CharacterSelection
-OpenAssetsAtExit=/Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap:PersistentLevel.SideScrollerExampleMap
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Player1HealthBar.Player1HealthBar
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -859,7 +859,7 @@ K2Node_InputKey.Input=True
 K2Node_InputKey.Modifier=True
 Border.Layout=True
 Border.Content=True
-Border.Appearance=False
+Border.Appearance=True
 Border.Behavior=True
 Border.Render Transform=True
 Border.Performance=True
@@ -1483,10 +1483,96 @@ REINST_SideScrollerCharacter2_C_367.ComponentReplication=True
 REINST_SideScrollerCharacter2_C_367.Activation=True
 REINST_SideScrollerCharacter2_C_367.Cooking=True
 REINST_SideScrollerCharacter2_C_367.Events=True
+REINST_SideScrollerCharacter_C_139.Variable=True
+REINST_SideScrollerCharacter_C_139.TransformCommon=True
+REINST_SideScrollerCharacter_C_139.Sockets=True
+REINST_SideScrollerCharacter_C_139.Animation=True
+REINST_SideScrollerCharacter_C_139.Mesh=True
+REINST_SideScrollerCharacter_C_139.Materials=True
+REINST_SideScrollerCharacter_C_139.Clothing=True
+REINST_SideScrollerCharacter_C_139.ClothingSimulation=True
+REINST_SideScrollerCharacter_C_139.Physics=True
+REINST_SideScrollerCharacter_C_139.Collision=True
+REINST_SideScrollerCharacter_C_139.Lighting=True
+REINST_SideScrollerCharacter_C_139.Rendering=True
+REINST_SideScrollerCharacter_C_139.Tags=True
+REINST_SideScrollerCharacter_C_139.ComponentReplication=True
+REINST_SideScrollerCharacter_C_139.Activation=True
+REINST_SideScrollerCharacter_C_139.Cooking=True
+REINST_SideScrollerCharacter_C_139.Events=True
+REINST_SideScrollerCharacter_C_154.Variable=True
+REINST_SideScrollerCharacter_C_154.TransformCommon=True
+REINST_SideScrollerCharacter_C_154.Sockets=True
+REINST_SideScrollerCharacter_C_154.Animation=True
+REINST_SideScrollerCharacter_C_154.Mesh=True
+REINST_SideScrollerCharacter_C_154.Materials=True
+REINST_SideScrollerCharacter_C_154.Clothing=True
+REINST_SideScrollerCharacter_C_154.ClothingSimulation=True
+REINST_SideScrollerCharacter_C_154.Physics=True
+REINST_SideScrollerCharacter_C_154.Collision=True
+REINST_SideScrollerCharacter_C_154.Lighting=True
+REINST_SideScrollerCharacter_C_154.Rendering=True
+REINST_SideScrollerCharacter_C_154.Tags=True
+REINST_SideScrollerCharacter_C_154.ComponentReplication=True
+REINST_SideScrollerCharacter_C_154.Activation=True
+REINST_SideScrollerCharacter_C_154.Cooking=True
+REINST_SideScrollerCharacter_C_154.Events=True
+SoundWave.Compression=True
+SoundWave.SoundWave=True
+SoundWave.Streaming=True
+SoundWave.Subtitles=True
+SoundWave.Sound=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Debug=True
+SoundWave.Concurrency=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+SoundCue.Attenuation=True
+SoundCue.AttenuationDistance=True
+SoundCue.AttenuationSpatialization=True
+SoundCue.Sound=True
+SoundCue.AttenuationAirAbsorption=True
+SoundCue.Subtitles=True
+SoundCue.AttenuationListenerFocus=True
+SoundCue.Debug=True
+SoundCue.AttenuationOcclusion=True
+SoundCue.Concurrency=True
+SoundCue.Effects=True
+SoundCue.Info=True
+MatchEnd_C.Default=True
+MatchEnd_C.Appearance=True
+MatchEnd_C.Designer=True
+MatchEnd_C.Input=True
+MatchEnd_C.Interaction=True
+MatchEnd_C.Layout=True
+MatchEnd_C.Behavior=True
+MatchEnd_C.Render Transform=True
+MatchEnd_C.Performance=True
+MatchEnd_C.Clipping=True
+MatchEnd_C.Navigation=True
+REINST_SideScrollerCharacter2_C_608.None=True
+REINST_SideScrollerCharacter2_C_608.Tick=True
+REINST_SideScrollerCharacter2_C_608.Character=True
+REINST_SideScrollerCharacter2_C_608.Camera=True
+REINST_SideScrollerCharacter2_C_608.Pawn=True
+REINST_SideScrollerCharacter2_C_608.Rendering=True
+REINST_SideScrollerCharacter2_C_608.Replication=True
+REINST_SideScrollerCharacter2_C_608.Input=True
+REINST_SideScrollerCharacter2_C_608.Actor=True
+REINST_SideScrollerCharacter2_C_635.None=True
+REINST_SideScrollerCharacter2_C_635.Tick=True
+REINST_SideScrollerCharacter2_C_635.Character=True
+REINST_SideScrollerCharacter2_C_635.Camera=True
+REINST_SideScrollerCharacter2_C_635.Pawn=True
+REINST_SideScrollerCharacter2_C_635.Rendering=True
+REINST_SideScrollerCharacter2_C_635.Replication=True
+REINST_SideScrollerCharacter2_C_635.Input=True
+REINST_SideScrollerCharacter2_C_635.Actor=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
-Object=
+Object="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.GridSnapping.ScalingGridSizes\" \"Object.Preview.PreviewMeshes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -1514,11 +1600,11 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
-Border="\"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Render Transform.RenderTransform\" "
+Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -1532,6 +1618,7 @@ Button="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 Player2HealthBar_C=
 Player1HealthBar_C=
+MatchEnd_C="\"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1566,15 +1653,15 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [AssetEditorToolkitTabLocation]
-/Game/SideScrollerBP/Blueprints/SideScrollerCharacter2.SideScrollerCharacter2=1
-/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=1
+/Game/SideScrollerBP/Blueprints/SideScrollerCharacter2.SideScrollerCharacter2=0
+/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=0
 /Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode=1
-/Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap:PersistentLevel.SideScrollerExampleMap=1
+/Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap:PersistentLevel.SideScrollerExampleMap=0
 /Game/SideScrollerBP/Blueprints/Player1HealthBar.Player1HealthBar=1
 /Game/SideScrollerBP/Blueprints/Player2HealthBar.Player2HealthBar=1
-/Game/Widgets/MainMenu.MainMenu=1
-/Game/Widgets/CharacterSelection.CharacterSelection=1
-/Game/SideScrollerBP/Imports/Vampire/vampire_a_lusth_Skeleton_AnimBlueprint.vampire_a_lusth_Skeleton_AnimBlueprint=1
+/Game/Widgets/MainMenu.MainMenu=0
+/Game/Widgets/CharacterSelection.CharacterSelection=0
+/Game/SideScrollerBP/Imports/Vampire/vampire_a_lusth_Skeleton_AnimBlueprint.vampire_a_lusth_Skeleton_AnimBlueprint=0
 /Game/SideScrollerBP/Maps/Menu.Menu:PersistentLevel.Menu=0
 /Game/SideScrollerBP/Imports/Vampire/Anims/BoxingVamp_mid.BoxingVamp_mid=0
 /Game/SideScrollerBP/Blueprints/MenuGameMode.MenuGameMode=0
@@ -1594,7 +1681,7 @@ NodeTemplateCacheCapMB=20.000000
 /Game/SideScrollerBP/Imports/Vampire/Anims/Walking.Walking=0
 /Game/SideScrollerBP/Imports/Girl/anims/Jump.Jump=0
 /Game/SideScrollerBP/Imports/Girl/anims/LegSweepLow.LegSweepLow=0
-/Game/SideScrollerBP/Imports/Girl/notMaria_animBP.notMaria_animBP=0
+/Game/SideScrollerBP/Imports/Girl/notMaria_animBP.notMaria_animBP=1
 /Game/SideScrollerBP/Imports/Vampire/Anims/Body_Block.Body_Block=1
 /Game/SideScrollerBP/Imports/Girl/notMaria_BP.notMaria_BP=1
 /Game/SideScrollerBP/Imports/Girl/anims/notMariaBlock.notMariaBlock=1
@@ -1603,16 +1690,16 @@ NodeTemplateCacheCapMB=20.000000
 /Game/Widgets/Timer.Timer=1
 /Game/SideScrollerBP/Imports/Girl/anims/notMariaThreatening.notMariaThreatening=0
 /Game/SideScrollerBP/Imports/Vampire/Anims/Body_Block__2_.Body_Block__2_=1
-/Game/Widgets/MatchEnd.MatchEnd=1
+/Game/Widgets/MatchEnd.MatchEnd=0
 /Game/SideScrollerBP/Imports/Douglas/Douglas.Douglas=0
 /Game/SideScrollerBP/Imports/Douglas/Douglas_Anim.Douglas_Anim=0
 /Game/SideScrollerBP/Imports/Douglas/Douglas_PhysicsAsset.Douglas_PhysicsAsset=0
 /Game/SideScrollerBP/Imports/TheBoss/theboss.theboss=0
 /Game/SideScrollerBP/Imports/Liam/liam.liam=1
 /Game/SideScrollerBP/Imports/Vampire/vampire_a_lusth_Anim_Take_001.vampire_a_lusth_Anim_Take_001=1
-/Game/SideScrollerBP/Imports/TheBoss/theBoss_AnimBP.theBoss_AnimBP=1
+/Game/SideScrollerBP/Imports/TheBoss/theBoss_AnimBP.theBoss_AnimBP=0
 /Game/SideScrollerBP/Imports/notDouglas/elyNotDouglas_BS.elyNotDouglas_BS=1
-/Game/SideScrollerBP/Imports/notDouglas/elyNotDouglas_animBP.elyNotDouglas_animBP=1
+/Game/SideScrollerBP/Imports/notDouglas/elyNotDouglas_animBP.elyNotDouglas_animBP=0
 /Game/SideScrollerBP/Imports/TheBoss/anims/Kicking_High.Kicking_High=1
 /Game/SideScrollerBP/Imports/notDouglas/anims/KickingHigh.KickingHigh=1
 /Game/SideScrollerBP/Imports/notDouglas/anims/KickingLow.KickingLow=1
@@ -1622,6 +1709,8 @@ NodeTemplateCacheCapMB=20.000000
 /Game/SideScrollerBP/Imports/TheBoss/anims/Kicking_Mid.Kicking_Mid=1
 /Game/SideScrollerBP/Imports/Vampire/Anims/HeavyVamp_mid.HeavyVamp_mid=1
 /Game/SideScrollerBP/MyGameInstance.MyGameInstance=1
+/Game/SideScrollerBP/Audio/UE4_Title_Music.UE4_Title_Music=0
+/Game/SideScrollerBP/Audio/UE4_Battle_Music.UE4_Battle_Music=0
 
 [RootWindow]
 ScreenPosition=X=384.000 Y=145.000
@@ -2292,7 +2381,7 @@ PreviewHeight=720
 PreviewAspectRatio=16:9
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
